--- a/styles/architect.css
+++ b/styles/architect.css
@@ -12,6 +12,10 @@
   display: flex;
 }
 
+.text-primary{
+  color: #FF900E;
+}
+
 /* dark 02 */
 .text-gray{
   color: #424242;
@@ -33,7 +37,19 @@
   border: none;
 }
 
+/* main style */
+main{
+  max-width: 940px;
+  margin: 0 auto;
+}
+main > section{
+  margin-top: 130px;
+}
 
+.section-title{
+  font-size: 2.8rem; 
+  font-weight: 700;
+}
 
 /* header style  */
 /* navbar related styles  */
@@ -55,7 +71,7 @@
 }
 
 .navbar, .banner{
-  max-width: 1140px;
+  max-width: 1340px;
   margin:  auto;
 }
 
@@ -74,9 +90,72 @@
   width: 100%;
 }
 
+/* team and feature related styles */
+.team{
+  align-items: center;
+}
+.team-img-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+.our-features{
+  margin-left: 130px;
+  max-width: 530px;
+}
+#quick-list{
+  font-weight: 500;
+}
+
+/* Some facts related styles*/
+.facts-container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 24px;
+}
+.fact-card{
+  border: 1px solid #FF900E;
+  width: 240px;
+  height: 240px;
+  border-radius: 8px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+.fact-number{
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+.fact-name{
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 10px;
+}
+.fact-description{
+  max-width: 540px;
+}
+
 /* responsive media query  */
 @media screen and (max-width: 576px) {
-  .navbar, .nav-links{
+  .navbar, .nav-links, .teams{
     flex-direction: column;
+  }
+  .team-img-container{
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .our-features{
+    margin-left: 20px;
+  }
+}
+
+/* medium size device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .teams{
+    flex-direction: column;
+  }
+  .our-features{
+    margin: 50px auto;
   }
 }
